fix(plugins/music): fixed overlapping music titles (#899)

--- a/source/templates/classic/style.css
+++ b/source/templates/classic/style.css
@@ -496,7 +496,7 @@
     flex-wrap: wrap;
   }
   svg.large .track {
-    width: 25%;
+    width: 50%;
   }
 
 /* Posts plugin */
